# avro-boost-python

./: README.md
avro-data-reader/: pom.xml
avro-data-reader/src/main/java/org/negasoft/: ByteProcess.java  Main.java  PythonAvroProcessor.java
boost-python/: .gitignore  AvroWrapper.cpp  AvroWrapper.h  CMakeLists.txt  avrotest.py  cpx.hh  cpx.json  main.cpp  parent.hpp  parent_module.hpp
boost-python/avro-module/: record.json
boost-python/processor/: CMakeLists.txt  org_negasoft_ByteProcess.cpp  org_negasoft_ByteProcess.h  python_processor.cpp  python_processor.hpp
generator/: README.md  record.json  temp.jinja
generator/negasoft/: generator.py
